
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int FD_CLOEXEC ;
 int F_SETFD ;
 int O_RDONLY ;
 int R_OK ;
 int SET4 (char* const,char,float,char,char) ;
 unsigned int UPX2 ;
 int X_OK ;
 scalar_t__ access (char*,int) ;
 int close (int const) ;
 int execve (char*,char const* const*,char const* const*) ;
 int fcntl (int const,int ,int ) ;
 int const getpid () ;
 int open (char const*,int ,int ) ;
 int unlink (char const*) ;
 char* upx_itoa (int const,char* const) ;

__attribute__((used)) static int



go_self(char const *tmpname, char *argv[], char *envp[])
{



    int const fdi = open(tmpname, O_RDONLY, 0);

    if (0 <= fdi) {



        char procself_buf[31+1];


        SET4(procself_buf + 0, '/', 'p', 'r', 'o');
        SET4(procself_buf + 4, 'c', '/', 0 , 0 );
        {
            char *const procself = upx_itoa(getpid(), procself_buf + 6);
            SET4(procself, '/', 'f', 'd', '/');
            upx_itoa(fdi, procself + 4);
        }



        if (UPX2 == (unsigned) access(procself_buf, R_OK | X_OK)) {

            unlink(tmpname);

            fcntl(fdi, F_SETFD, FD_CLOEXEC);

            execve(procself_buf, (char const *const *)argv, (char const *const *)envp);

        }


        close(fdi);
    }
    return fdi;
}
